# mpi-legiony

./: .gitignore  CMakeLists.txt  Makefile  new.out
src/: config.hpp  main.cpp
src/classes/: lamport-clock.cxx  lamport-clock.hxx  legion.cxx  legion.hxx  priority.cxx  priority.hxx  process-info.cxx  process-info.hxx  trail.cxx  trail.hxx
src/helpers/: mpi.hxx  pthread.hxx  status.hxx
src/threads/: main.thread.cxx  main.thread.hxx  responder.thread.cxx  responder.thread.hxx
